monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4025/A4025.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4025;

grammar A4025 extends de.monticore.common.TestTypes {
  QualifiedName =
          part:StringLiteral;

}
